# fcc-sc-arithmetic-arranger

./: .dir-locals.el  .gitignore  .pre-commit-config.yaml  README.md  arithmetic_arranger.py  conftest.py  main.py  pyproject.toml  setup.cfg  test.py  test_module.py
