# ******************************************************************************
#
# fcc-sc-arithmetic-arrangeer
#
# Copyright 2020-2024 Jeremy A Gray <gray@flyquackswim.com>.
#
# All rights reserved.
#
# ******************************************************************************

[tool]

[tool.isort]

ensure_newline_before_comments = true
force_single_line = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true

[tool.pccc]

header_length = 50
body_length = 72
wrap = true
force_wrap = true
spell_check = false
repair = false
ignore_generated_commits = false

types = [
  "depends",
  "doc",
  "feat",
  "fix",
  "perf",
  "refactor",
  "release",
  "style",
  "test",
]

scopes = [
  "arranger",
  "tooling",
]

footers = [
  "github-closes",
  "signed-off-by",
]

required_footers = [
  "signed-off-by",
]

[tool.poetry]

authors = ["Jeremy A Gray <jeremy.a.gray@gmail.com>"]
description = "FCC SC Arithmetic Arranger Project"
name = "fcc-sc-arithmetic-arranger"
version = "0.1.1"

[tool.poetry.dependencies]

python = ">=3.10.1,<4"
pccc = ">=0"

[tool.poetry.dev-dependencies]

black = ">=24"
isort = ">=5"
pre-commit = ">=3"
pytest = ">=8"
pytest-cov = ">=5"
